--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
