--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7",
+    "readline-sync": "^1.4.10",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
